--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -20,8 +20,9 @@ Default Css
 /***************************************************/
 :root{
     --color-default:#797C8B;
-    --primary-color: #181C32;
-    --secondary-color: #00A3FF;
+    --primary-color: #383838;
+    --secondary-color: #E50101;
+
     --font-default :'Poppins', sans-serif;
     --font-primary : 'Inter', sans-serif;
 }
@@ -444,6 +445,12 @@ img{
     position: relative;
     margin-left: 50px;
 }
+.bannar-content h3{
+    font-size: 35px;
+    font-weight: 400;
+    line-height: 57px;
+    color: #000000;
+}
 .bannar-content h4:before {
 	position: absolute;
 	content: "";
@@ -451,7 +458,7 @@ img{
 	left: -50px;
 	width: 40px;
 	height: 2px;
-	background-color: #0A1C3A;
+	background-color: #2C2C2C;
 }
 .bannar-content h2{
     font-size: 65px;
@@ -612,7 +619,7 @@ img{
 ***************************************************************/
 .pricing-area {
 	margin-top: 110px;
-	background: #0A1C3A;
+	background: #2C2C2C;
 	padding-bottom: 100px;
     position: relative;
     z-index: 1;
@@ -639,9 +646,13 @@ img{
 .pricing-area h3{
     color: #fff !important;
 }
+.z-10{
+    z-index: 10;
+    position: relative;
+}
 .pricing-table{
     padding:  30px 16px; 
-    background-color: #283753;
+    background-color: #fff;
     border-radius: 10px;
     text-align: center;
     box-sizing: border-box;
@@ -652,14 +663,15 @@ img{
     font-weight: 600;
     color: #fff;
     border-radius: 28px;
-    background-color: #3C527B;
+    /* background-color: var(--secondary-color); */
+    background-color: #333;
     padding: 13px 32px;
     margin-bottom: 25px;
 }
 .pricing-table h4{
     font-size: 30px;
     font-weight: 600;
-    color: #C1CEE5;
+    color: #333;
     margin-bottom: 30px;
 }
 .small-text{
@@ -674,7 +686,7 @@ img{
     margin-top: 20px;
 }
 .color-ff{
-    color: #C1CEE5 !important;
+    color: #333 !important;
 }
 .subscribe-btn{
     margin-top: 30px;
@@ -683,11 +695,11 @@ img{
     font-weight: 500;
     color: #fff;
     border-radius: 5px;
-    background-color: #3C527B;
+    background-color: var(--secondary-color);
     padding: 12px 30px;
 }
 .subscribe-btn:hover{
-    background-color:#385792 ;
+    background-color:#333 ;
     color: #fff;
 }
 /******** Pricing Area End 
@@ -804,7 +816,7 @@ img{
 }
 .contact-us-btn:hover{
     color: #fff;
-    background-color: #0c88cf;
+    background-color: #222;
     
 }
 .envolepe-messeage {
@@ -833,7 +845,7 @@ img{
 /******** Footer Area Start
 ***************************************************************/
 .footer-area{
-    background-color: #0A1C3A;
+    background-color: #2C2C2C;
     padding-top: 80px;
 }
 .footer-logo img{
